--- a/app/views/erp/finances/backend/services/edit.html.erb
+++ b/app/views/erp/finances/backend/services/edit.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :page_title do %>    
     <a href="<%= erp_finances.backend_services_path %>">
-    <i class="fa fa-balance-scale"></i> <%= t('.brands') %>
+    <i class="fa fa-balance-scale"></i> <%= t('.services') %>
     </a> / <%= @service.name %>
 <% end %>
 
