--- a/app/views/erp/finances/backend/services/edit.html.erb
+++ b/app/views/erp/finances/backend/services/edit.html.erb
@@ -8,12 +8,14 @@
     </a> / <%= @service.name %>
 <% end %>
 
-<% content_for :page_toolbar do %>
-    <%= erp_component('button/create', {
-        text: t('.create'),
-        href: erp_finances.new_backend_service_path,
-        class: 'btn-noborder'
-    }) %>
+<% if can? :create, Erp::Finances::Service %>
+    <% content_for :page_toolbar do %>
+        <%= erp_component('button/create', {
+            text: t('.create'),
+            href: erp_finances.new_backend_service_path,
+            class: 'btn-noborder'
+        }) %>
+    <% end %>
 <% end %>
 
 <div class="row">
