--- a/app/views/erp/finances/backend/services/index.html.erb
+++ b/app/views/erp/finances/backend/services/index.html.erb
@@ -6,12 +6,14 @@
     <i class="fa fa-balance-scale"></i> <%= t('.services') %>
 <% end %>
 
-<% content_for :page_toolbar do %>
-    <%= erp_component('button/create', {
-        text: t('.create'),
-        href: erp_finances.new_backend_service_path,
-        class: 'btn-noborder'
-    }) %>
+<% if can? :create, Erp::Finances::Service %>
+    <% content_for :page_toolbar do %>
+        <%= erp_component('button/create', {
+            text: t('.create'),
+            href: erp_finances.new_backend_service_path,
+            class: 'btn-noborder'
+        }) %>
+    <% end %>
 <% end %>
 
 <%= erp_datalist(
@@ -30,12 +32,6 @@
         }
     ],
     actions: [
-        {
-            text: '<i class="fa fa-trash"></i> '+t('.delete'),
-            url: erp_finances.delete_all_backend_services_path,
-            data_method: 'DELETE',
-            data_confirm: t('delete_confirm')
-        }
     ],
     filters: [
     ],
