--- a/app/views/erp/finances/backend/service_registers/_form.html.erb
+++ b/app/views/erp/finances/backend/service_registers/_form.html.erb
@@ -40,7 +40,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <%= erp_form_control("number", {
+                                <%= erp_form_control("text", {
                                     name: 'service_register[price]',
                                     value: service_register.price,
                                     label: t('.price'),
